--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login">LOGIN</string>
     <string name="masuk">MASUK</string>
     <string name="daftar">DAFTAR</string>
+    <string name="username">Username</string>
 </resources>
