--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
-    <string name="app_name">Test</string>
+    <string name="app_name">WEDDING INVITATION</string>
     <string name="splash">WELCOME</string>
-    <string name="register">REGISTRASI</string>
-    <string name="login">LOGIN</string>
-    <string name="masuk">MASUK</string>
-    <string name="daftar">DAFTAR</string>
-    <string name="username">Username :</string>
-       <string name="email">Email    :</string>
-    <string name="password">Password :</string>
+    <string name="register">SIGN UP</string>
+    <string name="login">SIGN IN</string>
+    <string name="username">Username</string>
+       <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
